--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,14 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "multer": "^2.0.2"
+    "fs-extra": "^11.3.2",
+    "groq-sdk": "^0.37.0",
+    "multer": "^2.0.2",
+    "pdfjs-dist": "^5.4.449"
   }
 }
