--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "fs-extra": "^11.3.2",
     "groq-sdk": "^0.37.0",
     "multer": "^2.0.2",
-    "pdfjs-dist": "^5.4.449"
+    "pdfjs-dist": "^5.4.449",
+    "pdfkit": "^0.17.2"
   }
 }
